# grocery-app-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml
adapters/: orm.py  repository.py
domain/: models.py
entrypoints/: flask_app.py
migrations/versions/: a371f789a065_create_grocery_lists_and_grocery_items_.py  f879a92970d9_create_grocery_lists_and_grocery_items_.py
service_layer/: __init__.py  services.py
tests/unit/: test_groceryitem.py  test_grocerylist.py  test_services.py
